dropped majority of phonegap code in favor of their example on contacts (simpler/less code) and fixed a css issue.

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,7 @@
 .bold{
     font-weight: 800;
 }
+
+input::-webkit-inner-spin-button{
+    display: none;
+}
